--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-type-animation": "^3.2.0",
     "ssl": "^1.0.0"
   },
   "devDependencies": {
