--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^7.2.0",
     "dotenv": "^17.2.0",
     "next": "15.4.1",
+    "path": "^0.12.7",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-type-animation": "^3.2.0",
-    "ssl": "^1.0.0"
+    "ssl": "^1.0.0",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
