--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "dotenv": "^17.2.0",
+    "full-name-generator": "^0.2.0",
     "next": "15.4.1",
     "path": "^0.12.7",
     "pg": "^8.16.3",
